Added simsharing project as a dependency of molecule-shapes for testing, should be removed before any more public deploys of this sim
Added sim sharing events for dragging atoms, electron pairs or rotating the view
Added SimSharingEvents and reporting from creating/destroying bonds and all checkboxes
# 1.01.00 (57968) Oct 24, 2011
# 1.00.04 (57962) Oct 24, 2011
> Fixed: molecule shapes are sometimes incorrect because single, double and triple bonds are treated differently, see #3128
10/24/11 Treat 1-3 bonds equivalently in AttractorModel and MoleculeModel, see #3128
# 1.00.03 (57720) Oct 17, 2011
10/17/11 Error reporting tweak for JME
10/17/2011 Reverted trial fix for rendering problems on 1.5, see #3122
# 1.00.03 (57702) Oct 17, 2011
10/17/2011 Trial fix for rendering problems on 1.5, see #3122
# 1.00.02 (57616) Oct 13, 2011
10/13/11 Changed Basics colors
# 1.00.01 (57533) Oct 12, 2011
10/12/11 Added "Basics" simulation version
Added Molecule Shapes: Basics
# 1.00.00 (57427) Oct 10, 2011
# 0.02.00 (57424) Oct 10, 2011
Removed unused items from data
Removed '<' and '>' from bond angles when lone pairs exist
# 0.00.42 (57341) Oct 5, 2011
Added in '<' and '>' for bond angle differences for when lone pairs exist
Potentially fixed the "missing wedge" bug for bond angle sectors
# 0.00.41 (57259) Oct 4, 2011
Fixed bug where atoms could come off of their bonds
Added optimizations to work around remaining memory leak
Fixed multiple memory leak bugs
# 0.00.40 (57078) Sep 29, 2011
Mode changed to "White Background"
# 0.00.39 (57076) Sep 29, 2011
"Teacher" menu i18nized, changed to one checkbox for "Projector Mode" option.
# 0.00.38 (57065) Sep 29, 2011
# 0.00.37 (57060) Sep 29, 2011
Minor text change for "Teacher" menu
Center atom made purple
Removed "Real Examples" panel from the 1st tab
Bugfixes
# 0.00.36 (56939) Sep 23, 2011
9/23/11 Added colors options (projector mode), lots of code changes
# 0.00.35 (56504) Sep 13, 2011
Increased the font size of the real example name