@@ -122,6 +122,7 @@
       <module fileurl="file://$PROJECT_DIR$/simulations-java/simulations/signal-circuit/signal-circuit.iml" filepath="$PROJECT_DIR$/simulations-java/simulations/signal-circuit/signal-circuit.iml" />
       <module fileurl="file://$PROJECT_DIR$/util/simsharing/simsharing.iml" filepath="$PROJECT_DIR$/util/simsharing/simsharing.iml" />
       <module fileurl="file://$PROJECT_DIR$/util/simsharing-cassandra/simsharing-cassandra.iml" filepath="$PROJECT_DIR$/util/simsharing-cassandra/simsharing-cassandra.iml" />
+      <module fileurl="file://$PROJECT_DIR$/simulations-java/common/simsharing-core/simsharing-core.iml" filepath="$PROJECT_DIR$/simulations-java/common/simsharing-core/simsharing-core.iml" />
       <module fileurl="file://$PROJECT_DIR$/simulations-java/simulations/simsharing-test-sim/simsharing-test-sim.iml" filepath="$PROJECT_DIR$/simulations-java/simulations/simsharing-test-sim/simsharing-test-sim.iml" />
       <module fileurl="file://$PROJECT_DIR$/simulations-java/contrib/slf4j/slf4j.iml" filepath="$PROJECT_DIR$/simulations-java/contrib/slf4j/slf4j.iml" />
       <module fileurl="file://$PROJECT_DIR$/simulations-java/simulations/soluble-salts/soluble-salts.iml" filepath="$PROJECT_DIR$/simulations-java/simulations/soluble-salts/soluble-salts.iml" />
