@@ -1,0 +1,4 @@
+# Copyright 2002-2011, University of Colorado
+project.depends.lib=piccolo-phet
+project.depends.source=src
+project.depends.data=data
