@@ -1,5 +1,5 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.simsharing.socketutil;
+package edu.colorado.phet.common.simsharingcore;
 
 import java.io.IOException;
 import java.util.ArrayList;
