@@ -15,14 +15,14 @@ import javax.swing.Timer;
 import edu.colorado.phet.common.phetcommon.simsharing.SimState;
 import edu.colorado.phet.common.phetcommon.simsharing.SimsharingApplication;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
+import edu.colorado.phet.common.simsharingcore.Client;
+import edu.colorado.phet.common.simsharingcore.IActor;
+import edu.colorado.phet.common.simsharingcore.ThreadedActor;
 import edu.colorado.phet.simsharing.messages.AddSamples;
 import edu.colorado.phet.simsharing.messages.EndSession;
 import edu.colorado.phet.simsharing.messages.SessionID;
 import edu.colorado.phet.simsharing.messages.StartSession;
 import edu.colorado.phet.simsharing.server.Server;
-import edu.colorado.phet.simsharing.socketutil.Client;
-import edu.colorado.phet.simsharing.socketutil.IActor;
-import edu.colorado.phet.simsharing.socketutil.ThreadedActor;
 
 /**
  * @author Sam Reid
